# VoxelsTest

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: cmake.yml
res/: frag.glsl  shadowVert.glsl  vert.glsl
src/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  Editing.cpp  Editing.h  FrustumCulling.cpp  FrustumCulling.h  FuncTimer.h  Main.cpp  Physics.cpp  Physics.h  Save.cpp  Save.h  VoxelRenderer.cpp  VoxelRenderer.h
